AUTHORS: Fix typo

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Libvirt-php extension
 =====================
 
-Libvirt-php extension is currently maintained by:
+Libvirt-php extension is currently maintained and developed by:
 
 	Michal Novotny <minovotn@redhat.com> (or <mignov@gmail.com>)
 
