Update AUTHORS file and rename files to libvirt-php.[c|h]
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ There are also other people that contributed the to project:
 	Jan-Paul van Burgsteden <e-mail@unknown.tld>
 	Lyre <liyong@skybility.com> (or <4179e1@gmail.com>)
 	Daniel P. Berrange <berrange@redhat.com>
+	Tiziano Mueller <dev-zero@gentoo.org>
 
 If you would like to be listed in the contributors list
 feel free to clone this repository to your computer and
