--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ There are also other people that contributed the to project:
 	Lyre <liyong@skybility.com> (or <4179e1@gmail.com>)
 	Daniel P. Berrange <berrange@redhat.com>
 	Tiziano Mueller <dev-zero@gentoo.org>
+	Yukihiro Kawada <warp.kawada@gmail.com>
 
 If you would like to be listed in the contributors list
 feel free to clone this repository to your computer and
