Fix typo in the AUTHORS file
As noticed by Justin Clift <jclift@redhat.com> there's typo
in the AUTHORS file so this fixes it.

Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,7 +11,7 @@ The original project, called php-libvirt, has been originally developed and main
 
 who is still contributing to the project with his patches.
 
-There are also other people that contributed the to project:
+There are also other people that have contributed to the project:
 
 	David King <e-mail@unknown.tld>
 	Jan-Paul van Burgsteden <e-mail@unknown.tld>
