Adding authors of recent patches

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,10 @@ There are also other people that have contributed to the project:
 	Daniel P. Berrange <berrange@redhat.com>
 	Tiziano Mueller <dev-zero@gentoo.org>
 	Yukihiro Kawada <warp.kawada@gmail.com>
+        Remi Collet <Remi@famillecollet.com>
+        Ivo van den Abeelen <ivovandenabeelen@gmail.com>
+        Tiziano Müller <dev-zero@gentoo.org>
+        Pavel Odintsov <pavel.odintsov@gmail.com>
 
 If you would like to be listed in the contributors list
 feel free to clone this repository to your computer and
