Add stefan.kuhn@foss-group.ch to AUTHORS file
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ There are also other people that have contributed to the project:
         Tiziano Müller <dev-zero@gentoo.org>
         Pavel Odintsov <pavel.odintsov@gmail.com>
         Tugdual Saunier <tugdual.saunier@gmail.com>
+	Stefan Kuhn <stefan.kuhn@foss-group.ch>
 
 Thanks goes to all of them with big thanks to Tugdual Saunier
 for various fixes and OS-X compilation support.
