--- a/README
+++ b/README
@@ -54,4 +54,4 @@ it's work in progress.
 Copyright /  License
 --------------------
 
-All the application code is covered under the GPL licence.
+All the application code is covered under the LGPL-2.1 licence.
