--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,15 @@
-* Tue 8 Feb 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1
-- Initial commit
+libvirt-php ChangeLog
+=====================
+
+The libvirt-php project doesn't include a detailed ChangeLog in its release
+archives.
+
+If you're interested in the full list of changes made to libvirt-php since
+the project was started, you can clone the git repository from
+
+  https://gitlab.com/libvirt/libvirt-php/
+
+and browse them locally using your favorite git history viewer or,
+alternatively, browse them online at
+
+  https://gitlab.com/libvirt/libvirt-php/-/commits/master
