Post-release version bump to 0.5.7
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,11 @@ libvirt-php releases
 This is the list of official releases for libvirt-php, along with an
 overview of the changes introduced by each of them.
 
+v0.5.7 (unreleased)
+===================
+
+*
+
 
 v0.5.6 (2022-06-14)
 ===================
