NEWS: Document PHP-6.0 and older removal
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ overview of the changes introduced by each of them.
 v0.5.7 (unreleased)
 ===================
 
-*
+* Dropped support for PHP-6.0 and older
 
 
 v0.5.6 (2022-06-14)
