--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,11 @@ libvirt-php releases
 This is the list of official releases for libvirt-php, along with an
 overview of the changes introduced by each of them.
 
+v0.5.9 (unreleased)
+===================
+
+*
+
 v0.5.8 (2024-01-22)
 ===================
 
